Bug 36380 - Horizontal Scrolling through mouse-wheel in wrong directions
Summary: Horizontal Scrolling through mouse-wheel in wrong directions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-19 00:55 UTC by Hanni Bunii
Modified: 2011-12-22 05:52 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hanni Bunii 2011-04-19 00:55:39 UTC
Hey,

opposite to the OS standard, the scroll-direction in horizontal mousewheel-scrolling is not in the way you move the wheel but in the other direction.

moving the wheel to the right moves the sight of the document to the left.

Is a known bug in OOo:

http://openoffice.org/bugzilla/show_bug.cgi?id=95390
Comment 1 Kohei Yoshida 2011-04-19 06:51:48 UTC
Can you describe what the OS standard behavior is?  And what OS in particular are you referring to?  Windows, Mac, KDE, Gnome etc?
Comment 2 Hanni Bunii 2011-04-19 08:53:31 UTC
As I tried to describe, the standard behavious is: Move the wheel to the right and the window scrolls to the right and vice versa.
In LO and OOo it's the other way around.

I'm using Win 7 Home Pro.


I think it's quite well discussed in the link I pasted.
Comment 3 Kohei Yoshida 2011-04-19 09:06:42 UTC
Ah, so you have a special mouse with a horizontal wheel?  I don't, and that's what confused me.
Comment 4 Andreas Becker 2011-04-19 10:45:38 UTC
I cannot reproduce this in Linux (XServer) with a touchpad that has horizontal scrolling enabled. Can someone test it with a touchpad in MS Windows?
Comment 5 Thorsten Behrens (allotropia) 2011-04-20 09:59:12 UTC
Ah ok, windows-only - so it seems then that vcl/win/source/window/salframe.cxx:3524 needs negation, in the horizontal case. Now just need the hardware ... ;)
Comment 6 Hanni Bunii 2011-04-20 12:24:13 UTC
Hardware?
can I help any further?
Comment 7 Hanni Bunii 2011-05-04 10:55:45 UTC
This is really driving my crazy. 

Any more information needed?
Comment 8 Thorsten Behrens (allotropia) 2011-05-06 16:07:50 UTC
Fixed by negating scroll values - cannot really verify the fix here, lacking the hardware.

Fridrich, any chance you can generate a tinderbox build from master at some time, and post the link here?
Comment 9 Hanni Bunii 2011-07-25 09:44:26 UTC
Hey,

is the fix already included?
Comment 10 Thorsten Behrens (allotropia) 2011-07-27 01:06:39 UTC
(In reply to comment #9)
> Hey,
> 
> is the fix already included?
>
Yes, the fix is in master - in theory, http://dev-builds.libreoffice.org/daily/ should have daily builds of that. Fridrich, Tor, if at any time you'll have a master build ready, please point Hanni to it.
Comment 11 Hanni Bunii 2011-11-24 07:05:11 UTC
Sorry but where can I find a version of libreoffice where the bug is fixed?

Thanks!
Comment 12 Thorsten Behrens (allotropia) 2011-11-25 15:32:53 UTC
(In reply to comment #11)
> Sorry but where can I find a version of libreoffice where the bug is fixed?
> 
E.g. here: http://dev-builds.libreoffice.org/daily/Voreppe_Win32_Tinderbox/master/current/
Comment 13 Björn Michaelsen 2011-12-22 05:36:01 UTC Comment hidden (noise)
Comment 14 Björn Michaelsen 2011-12-22 05:52:30 UTC Comment hidden (noise)