Swap direction on win32 horizontal scrolling

Fix for fdo#36380 - seems win32 reports negated scrolling for the
horizontal case.